<resources>
    <string name="app_name">ComunicFragments</string>
    <string name="transmision">Transmision</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="enviar">Enviar</string>
    <string name="recepcion">Recepcion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
